# convert_objs_to_abc

./: .gitattributes  CMakeLists.txt  README.md  launch_gui.sh
Objs2Abc/: Objs2Abc.cpp
macos/: README.md  build.sh
macos/Objs2Abc/: Objs2Abc.cpp
macos/scripts/: package_release.sh
scripts/: package_release.sh  publish_release.sh
windows/: .gitignore  BUILD_RELEASE_ZIP.bat  BUILD_STANDALONE_EXE.bat  CMakeLists.txt  INSTALL_BUILD_TOOLS.bat  OBJ_to_ABC_Windows.bat  README.md  START_HERE.bat  build.ps1  gui.py  launch_gui.bat  vcpkg.json
windows/Objs2Abc/: Objs2Abc.cpp
windows/scripts/: build_app_exe.ps1  install_build_tools.ps1  package_release.ps1
